--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,12 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import "./example";
+
+@import "./utils/fonts";
+@import "./utils/mixins";
+@import "./utils/variables";
+@import "./utils/visually-hidden";
+@import "./components/logo";
+@import "./components/header";
+@import "./components/footer";
