--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,12 +4,14 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
 
 @import './utils/fonts';
 @import './utils/mixins';
 @import './utils/variables';
 @import './utils/visually-hidden';
+@import './base/normalize';
+@import './base/common';
+@import './components/container';
 @import './components/logo';
 @import './components/header';
 @import './components/footer';
