--- a/src/sass/components/container.scss
+++ b/src/sass/components/container.scss
@@ -4,9 +4,9 @@
   padding-right: 15px;
   margin-right: auto;
   margin-left: auto;
-  @include for-size(mobile) {
-    width: 320px;
-  }
+  // @include for-size(mobile) {
+  //   width: 320px;
+  // }
   @include for-size(tablet) {
     width: 786px;
   }
