--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -1,1 +1,11 @@
 // colors
+$white-color: #ffffff;
+$main-color: #d41443;
+$second-color: #ffa5ba;
+$ice-cream: #ffb8ca;
+$coffee: #f0d1a5;
+$milkshake: #c2e297;
+$bg-color: #fff5f6;
+$text-color: #000000;
+$second-text-color: #907e82;
+$copyright: #907e82;
