Добавил шрифт и базовые стили для кнопки и секции

--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -1,5 +1,12 @@
 @import './container';
 @import './logo';
+@import './button.scss';
 @import './header';
 @import './footer';
 @import './section.scss';
+@import './card.scss';
+@import './feedback.scss';
+@import './gallery.scss';
+@import './howitsmade.scss';
+@import './products.scss';
+@import './copyright.scss';
