--- a/src/partials/copyright.html
+++ b/src/partials/copyright.html
@@ -1,5 +1,13 @@
 <div class="copyright">
   <div class="container">
-    <p class="coryright__text">© 2019 - IceCream. All Rights Reserved.</p>
+    <p class="coryright__text">
+      © 2019 - IceCream.<br />
+      All Rights Reserved.<br />
+      Maksym Yaryhin <br />Iliya Miroshnichenko <br />Anton San
+      <br />
+      Snizhana Mykhaylova<br />
+      Sergey Mikhailyuk<br />
+      Vitalii Latka <br />Iryna Chyryk <br />Iryna Zotovych
+    </p>
   </div>
 </div>
