--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -1,23 +1,28 @@
+// для шрифта
 @mixin font($fsz, $fw, $color, $lh) {
   font-size: $fsz;
   font-weight: $fw;
   color: $color;
   line-height: $lh;
 }
+// флекс
 @mixin flex($type: flex, $direction: row, $justcont: center, $ai: center) {
   display: $type;
   flex-direction: $direction;
   justify-content: $justcont;
   align-items: $ai;
 }
+// забор
 @mixin bordered($sz, $type, $color, $br: 1px) {
   border: $sz $type $color;
   border-radius: $br;
 }
+// для анимации
 @mixin trans($type, $prop, $time: 0.25s, $func: $timing) {
   #{$type}: #{$prop};
   transition: $type $time $func;
 }
+// медиа
 @mixin for-size($range) {
   $mobile: 320px;
   $tablet: 768px;
@@ -53,11 +58,3 @@
     }
   }
 }
-// @mixin generateIcons($iconList) {
-// 	@each $iconName in $iconList {
-// 		$index: index($icons, $iconName);
-// 		&:nth-child(#{$index})::before {
-// 			background-image: url(../images/icons/#{$iconName}.svg);
-// 		}
-// 	}
-// }
