--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -23,6 +23,8 @@ $bg-color: #fff5f6;
 $text-color: #000000;
 // второстепенный цвет текста
 $second-text-color: #907e82;
+// граница
+$border: #e18298;
 
 // functions
 // тайминг для transition
