--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,3 +1,13 @@
+.header {
+  position: relative;
+  padding-top: 10px;
+  height: 500px;
+  background-color: $ice-cream;
+}
+.header__flexbox {
+  padding-bottom: 24px;
+  @include flex($justcont: space-between);
+}
 .header__title {
   font-family: 'Titan One';
 }
@@ -5,4 +15,78 @@
   font-family: 'DM Sans';
   font-weight: 700;
   font-size: 100px;
+}
+.header__button {
+  @extend .button--white;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+  & .header__icon-close {
+    @include trans(opacity, 0);
+  }
+  & .header__icon-burger {
+    @include trans(opacity, 1);
+  }
+  &.is-open .header__icon-close {
+    @include trans(opacity, 1);
+  }
+  &.is-open .header__icon-burger {
+    @include trans(opacity, 0);
+  }
+}
+.header__icon-close {
+  @include trans(fill, $main-color);
+  .header__button:hover &,
+  .header__button:focus & {
+    @include trans(fill, $white-color);
+  }
+}
+.header__icon-burger {
+  @include trans(fill, $white-color);
+  .header__button:hover &,
+  .header__button:focus & {
+    @include trans(fill, $main-color);
+  }
+}
+.nav-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 60px;
+  padding-bottom: 64px;
+  background-color: $menu;
+  z-index: 2;
+  pointer-events: none;
+  @include trans(opacity, 0);
+  @include trans(visibility, hidden);
+  @include trans(transform, translateX(100%));
+  &.is-open {
+    pointer-events: initial;
+    @include trans(opacity, 1);
+    @include trans(visibility, visible);
+    @include trans(transform, translateX(0));
+  }
+}
+.nav__item {
+  padding: 12px 0;
+  padding-left: 20px;
+  border-top: 1px solid $border;
+  &:last-child {
+    border-bottom: 1px solid $border;
+  }
+}
+.nav__link {
+  display: inline-block;
+  @include font(18px, 500, $white-color, 1.14);
+}
+.nav__button {
+  @extend .button;
+  @extend .button--white;
+  @include font(16px, 700, $main-color, 1.31);
+
+  align-items: center;
 }
