--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,11 +1,11 @@
 .header {
   position: relative;
-  padding-top: 10px;
   height: 500px;
   background-color: $ice-cream;
 }
 .header__flexbox {
-  padding-bottom: 24px;
+  padding-bottom: 25px;
+  padding-top: 10px;
   @include flex($justcont: space-between);
 }
 .header__title {
@@ -17,7 +17,6 @@
   font-size: 100px;
 }
 .header__button {
-  @extend .button--white;
   display: inline-flex;
   margin: 0;
   padding: 0;
@@ -36,18 +35,12 @@
     @include trans(opacity, 0);
   }
 }
-.header__icon-close {
+.header__icon-close,
+.header__icon-burger {
   @include trans(fill, $main-color);
   .header__button:hover &,
   .header__button:focus & {
     @include trans(fill, $white-color);
-  }
-}
-.header__icon-burger {
-  @include trans(fill, $white-color);
-  .header__button:hover &,
-  .header__button:focus & {
-    @include trans(fill, $main-color);
   }
 }
 .nav-wrap {
@@ -56,8 +49,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding-top: 60px;
-  padding-bottom: 64px;
+  padding-top: 75px;
   background-color: $menu;
   z-index: 2;
   pointer-events: none;
@@ -86,7 +78,9 @@
 .nav__button {
   @extend .button;
   @extend .button--white;
+  display: block;
   @include font(16px, 700, $main-color, 1.31);
-
-  align-items: center;
+  padding: 15px 60px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
