Добавляет заголовок секции cards

--- a/src/partials/cards.html
+++ b/src/partials/cards.html
@@ -1,5 +1,6 @@
 <section class="section__cards section">
   <div class="container">
+    <h2 class="section__title">Адресс и контакт кафе и фудтраков з мороженым</h2>
     <div class="cards">
     <ul class="cards__row">
       <li class="cards__column">
