--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,3 +1,3 @@
-<section class="section__feedback section">
+<section class="section--feedback section">
   <div class="container"></div>
 </section>
