--- a/src/partials/cards.html
+++ b/src/partials/cards.html
@@ -67,8 +67,24 @@
         </div>
       </li>
     </ul>
-    <button class=""></button>
-    <button class=""></button>
+    <button class="cards__button">Our Locations
+      <svg 
+      class="cards__icon cards__icon--white"
+      width="6"
+      height="10"
+      >
+        <use href="./images/icons/sprite.svg#icon-bigger"></use>
+      </svg>
+    </button>
+    <button class="cards__button cards__button--white">Franchise
+      <svg 
+      class="cards__icon" 
+      width="6"
+      height="10"
+     >
+        <use href="./images/icons/sprite.svg#icon-bigger"></use>
+      </svg>
+    </button>
     </div>
   </div>
 </section>
