--- a/src/sass/components/card.scss
+++ b/src/sass/components/card.scss
@@ -1,9 +1,26 @@
 .cards__button {
+  @include flex(flex, center, center);
+  @extend .button;
+  @include font(16px, 700, $white-color, 1.31);
+  padding: 15px 17px;
+  margin: 0 auto;
+  width: 160px;
+  margin-bottom: 20px;
+  border-radius: 22px;
+}
+
+.cards__button--white {
   @extend .button;
   @extend .button--white;
-//   display: block;
-//   @include font(16px, 700, $main-color, 1.31);
-//   padding: 15px 60px;
-//   margin: 0 auto;
-//   margin-bottom: 20px;
+  @include font(16px, 700, $main-color, 1.31);
+  margin: 0 auto;
+  padding: 15px 32px;
+}
+
+.cards__icon {
+    margin-left: 8px;
+}
+
+.cards__icon__white {
+    fill: $white-color;
 }
