--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -4,7 +4,7 @@
 @import './header';
 @import './footer';
 @import './section.scss';
-@import './card.scss';
+@import './contacts.scss';
 @import './feedback.scss';
 @import './gallery.scss';
 @import './howitsmade.scss';
