добавил для телефона контейнер

--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -19,7 +19,7 @@
 .header__button {
   display: inline-flex;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   border: 0;
   background-color: transparent;
   & .header__icon-close {
