--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,5 @@
 <section class="section--gallery section">
-  <div class="container"></div>
+  <div class="container">
+    <img src="../images/desktop/logo@2x.jpg" alt="" srcset="">
+  </div>
 </section>
