Добавляет стилизацию карточек

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -5,106 +5,114 @@
       <ul class="contacts__row">
         <li class="contacts__column">
           <div class="contacts__item">
-            <div class="contacts__address">
-              <h3 class="contacts__title">CAFE</h3>
-              <b class="contacts__subtitle">Chicago</b>
-              <p class="contacts__text">
+            <div class="contacts-address">
+              <h3 class="contacts-address__title">CAFE</h3>
+              <p class="contacts-address__city">Chicago</p>
+              <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
               </p>
             </div>
-            <div class="contacts__working-time">
-              <b class="contacts__work-days">Monday - Friday</b>
-              <p class="contacts__open-hours">06:00 AM - 10:00 PM</p>
-              <b class="contacts__work-days">Saturday - Sunday</b>
-              <p class="contacts__open-hours">08:00 AM - 16:00 PM</p>
-            </div>
-            <div class="contacts__contact">
-              <ul class="contacts__contact-list">
-                <li class="contacts__phone">
-                  <a href="tel:+610383766284">+61(0) 383 766 284</a>
+            <ul class="contacts-work">
+              <li class="contact-work__item">
+                <p class="contacts-work__days">Monday - Friday</p>
+                <p class="contacts-work__time">06:00 AM - 10:00 PM</p>
+              </li>
+              <li class="contact-work__item">
+                <p class="contacts-work__days">Saturday - Sunday</p>
+                <p class="contacts-work__time">08:00 AM - 16:00 PM</p>
+              </li>
+            </ul>
+              <ul class="contacts-contact">
+                <li class="contacts-contact__item">
+                  <a href="tel:+610383766284" class="contacts-contact__link phone">+61(0) 383 766 284</a>
                 </li>
-                <li class="contacts__email">
-                  <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+                <li class="contacts-contact__item">
+                  <a href="mailto:noreply@envato.com" class="contacts-contact__link email">noreply@envato.com</a>
                 </li>
               </ul>
-            </div>
           </div>
         </li>
         <li class="contacts__column">
           <div class="contacts__item">
-            <div class="contacts__address">
-              <h3 class="contacts__title">FOOD TRUCK</h3>
-              <b class="contacts__subtitle">Los Angeles</b>
-              <p class="contacts__text">
+            <div class="contacts-address">
+              <h3 class="contacts-address__title contacts-address__title--green">FOODTRUCK</h3>
+              <p class="contacts-address__city">Los Angeles</p>
+              <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
               </p>
             </div>
-            <div class="contacts__working-time">
-              <b class="contacts__work-days">Monday - Friday</b>
-              <p class="contacts__open-hours">06:00 AM - 10:00 PM</p>
-              <b class="contacts__work-days">Saturday - Sunday</b>
-              <p class="contacts__open-hours">08:00 AM - 16:00 PM</p>
-            </div>
-            <div class="contacts__contact">
-              <ul class="contacts__contact-list">
-                <li class="contacts__phone">
-                  <a href="tel:+610383766284">+61(0) 383 766 284</a>
-                </li>
-                <li class="contacts__email">
-                  <a href="mailto:noreply@envato.com">noreply@envato.com</a>
-                </li>
-              </ul>
-            </div>
+            <ul class="contacts-work">
+              <li class="contact-work__item">
+                <p class="contacts-work__days">Monday - Friday</p>
+                <p class="contacts-work__time">06:00 AM - 10:00 PM</p>
+              </li>
+              <li class="contact-work__item">
+                <p class="contacts-work__days">Saturday - Sunday</p>
+                <p class="contacts-work__time">08:00 AM - 16:00 PM</p>
+              </li>
+            </ul>
+            <ul class="contacts-contact">
+              <li class="contacts-contact__item">
+                <a href="tel:+610383766284" class="contacts-contact__link phone">+61(0) 383 766 284</a>
+              </li>
+              <li class="contacts-contact__item">
+                <a href="mailto:noreply@envato.com" class="contacts-contact__link email">noreply@envato.com</a>
+              </li>
+            </ul>
           </div>
         </li>
         <li class="contacts__column">
           <div class="contacts__item">
-            <div class="contacts__address">
-              <h3 class="contacts__title">CAFE</h3>
-              <b class="contacts__subtitle">New York</b>
-              <p class="contacts__text">
+            <div class="contacts-address">
+              <h3 class="contacts-address__title">CAFE</h3>
+              <p class="contacts-address__city">Chicago</p>
+              <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
               </p>
             </div>
-            <div class="contacts__working-time">
-              <b class="contacts__work-days">Monday - Friday</b>
-              <p class="contacts__open-hours">06:00 AM - 10:00 PM</p>
-              <b class="contacts__work-days">Saturday - Sunday</b>
-              <p class="contacts__open-hours">08:00 AM - 16:00 PM</p>
-            </div>
-            <div class="contacts__contact">
-              <ul class="contacts__contact-list">
-                <li class="contacts__phone">
-                  <a href="tel:+610383766284">+61(0) 383 766 284</a>
-                </li>
-                <li class="contacts__email">
-                  <a href="mailto:noreply@envato.com">noreply@envato.com</a>
-                </li>
-              </ul>
-            </div>
+          <ul class="contacts-work">
+            <li class="contact-work__item">
+              <p class="contacts-work__days">Monday - Friday</p>
+              <p class="contacts-work__time">06:00 AM - 10:00 PM</p>
+            </li>
+            <li class="contact-work__item">
+              <p class="contacts-work__days">Saturday - Sunday</p>
+              <p class="contacts-work__time">08:00 AM - 16:00 PM</p>
+            </li>
+          </ul>
+            <ul class="contacts-contact">
+              <li class="contacts-contact__item">
+                <a href="tel:+610383766284" class="contacts-contact__link phone">+61(0) 383 766 284</a>
+              </li>
+              <li class="contacts-contact__item">
+                <a href="mailto:noreply@envato.com" class="contacts-contact__link email">noreply@envato.com</a>
+              </li>
+            </ul>
           </div>
-        </div>
-      </li>
-    </ul>
-    <button class="contacts__button">Our Locations
+        </li>
+      </ul>
+    </div>
+    <div class="contacts-block">
+    <button class="contacts-block__button">Our Locations
       <svg 
-      class="contacts__icon contacts__icon--white"
+      class="contacts-block__icon"
       width="6"
       height="10"
       >
-        <use href="./images/icons/sprite.svg#icon-bigger"></use>
+        <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
       </svg>
     </button>
-    <button class="contacts__button contacts__button--white">Franchise
+    <button class="contacts-block__button contacts-block__button--white">Franchise
       <svg 
-      class="contacts__icon" 
+      class="contacts-block__icon--white" 
       width="6"
       height="10"
      >
-        <use href="./images/icons/sprite.svg#icon-bigger"></use>
+        <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
       </svg>
     </button>
-
     </div>
+
+    
   </div>
 </section>
