добавил позиционирование для мобильного хедера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -46,9 +46,17 @@
       </div>
     </div>
     <section class="hero">
-      <h1 class="hero__title"><span>ice cream made with</span>passion</h1>
-      <button type="button" class="hero__button">Products</button>
-      <button type="button" class="hero__button --white">How it's made</button>
+      <span class="hero__desc section__desc">
+        ice cream<br />
+        made with
+      </span>
+      <h1 class="hero__title section__title section__title--hero">passion</h1>
+      <div class="header__buttons">
+        <button type="button" class="hero__button button">Products</button>
+        <button type="button" class="hero__button button--white">
+          How it's made
+        </button>
+      </div>
     </section>
   </div>
 </header>
