--- a/src/sass/components/_main.scss
+++ b/src/sass/components/_main.scss
@@ -4,6 +4,7 @@
 @import './header';
 @import './footer';
 @import './section.scss';
+@import './hero.scss';
 @import './contacts.scss';
 @import './feedback.scss';
 @import './gallery.scss';
