--- a/src/sass/components/hero.scss
+++ b/src/sass/components/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  height: calc(100% - 85px);
+  height: calc(100% - 85px * 2);
   @include flex($direction: column, $ai: start);
 }
 .hero__title {
