--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="section--gallery section">
   <div class="container">
-    <img src="../images/desktop/logo@2x.jpg" alt="" srcset="">
+    <img src="./images/desktop/logo@2x.jpg" alt="" srcset="" />
   </div>
 </section>
