Добавил outline и меню бургер

--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,7 +1,9 @@
 .header {
-  position: relative;
   height: 500px;
   background-color: $ice-cream;
+}
+.header__container {
+  position: relative;
 }
 .header__flexbox {
   padding-bottom: 25px;
@@ -48,16 +50,18 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: calc(100% - 70px);
+  width: 0;
   height: 100%;
-  padding-top: 75px;
+  padding-top: 85px;
   background-color: $menu;
   z-index: 2;
   pointer-events: none;
+  overflow-x: hidden;
   @include trans(opacity, 0);
   @include trans(visibility, hidden);
   @include trans(transform, translateX(100%));
   &.is-open {
+    width: 250px;
     pointer-events: initial;
     @include trans(opacity, 1);
     @include trans(visibility, visible);
