--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
+  <div class="container header__container">
     <div class="header__flexbox">
       <a href="#" class="logo"> <img src="./images/logo.png" alt="logo" /></a>
       <button type="button" class="header__button" data-menu-button>
