--- a/src/sass/utils/mixins.scss
+++ b/src/sass/utils/mixins.scss
@@ -28,12 +28,8 @@
   $tablet: 768px;
   $desktop: 1200px;
 
-  @if $range == mobile-only {
-    @media screen and (max-width: #{$mobile - 1px}) {
-      @content;
-    }
-  } @else if $range == mobile {
-    @media screen and (min-width: $mobile) {
+  @if $range == mobile {
+    @media screen and (min-width: $mobile) and (max-width: $tablet - 1) {
       @content;
     }
   } @else if $range == mobile-tablet {
