--- a/src/sass/components/contacts.scss
+++ b/src/sass/components/contacts.scss
@@ -15,7 +15,7 @@
 
 .contacts__item {
   padding: 43px 20px;
-  background-color:white;
+  background-color: $white-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
 }
