--- a/src/sass/components/contacts.scss
+++ b/src/sass/components/contacts.scss
@@ -14,6 +14,8 @@
 }
 
 .contacts__item {
+  width: 220px;
+  margin: 0 auto;
   padding: 43px 20px;
   background-color: $white-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
