--- a/src/sass/components/contacts.scss
+++ b/src/sass/components/contacts.scss
@@ -7,19 +7,24 @@
 .contacts {
   position: relative;
   bottom: 84px;
+  padding-right: 35px;
+  padding-left: 35px;
 }
 
+.contacts__row {
+
+}
 .contacts__column:not(:last-child) {
   margin-bottom: 20px;
 }
 
 .contacts__item {
-  width: 220px;
-  margin: 0 auto;
   padding: 43px 20px;
   background-color: $white-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
+
+
 }
 
 // Address
