--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,9 @@
 <header class="header">
   <div class="container header__container">
     <div class="header__flexbox">
-      <a href="#" class="logo"> <img src="./images/logo.png" alt="logo" /></a>
+      <a href="#" class="logo"
+        ><img src="./images/general/logo.png" alt="logo"
+      /></a>
       <button type="button" class="header__button" data-menu-button>
         <svg
           class="header__menu-icons"
