--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,8 +2,8 @@
   <div class="container header__container">
     <div class="header__flexbox">
       <a href="#" class="logo"
-        ><img src="./images/general/logo.png" alt="logo"
-      /></a>
+        ><img src="./images/general/logo.png" alt="logo" />
+      </a>
       <button type="button" class="header__button" data-menu-button>
         <svg
           class="header__menu-icons"
