--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -5,6 +5,19 @@
 .header__container {
   position: relative;
   overflow-x: hidden;
+  background-image: url("../images/mobile/header/ice-cream.png"), url("../images/icons/pink-circle-mobile.svg");
+  background-repeat: no-repeat;
+  background-position: right 32px bottom, right bottom 75px;
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (-webkit-min-device-pixel-ratio: 2),
+  screen and (-o-min-device-pixel-ratio: 2/1),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+    background-image: url("../images/mobile/header/ice-cream@2x.png"), url("../images/icons/pink-circle-mobile.svg");
+    background-size: 171px 410px, auto auto;
+  }
+
 }
 .header__flexbox {
   padding-bottom: 25px;
