--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -1,3 +1,40 @@
+<!DOCTYPE html>
 <section class="section--howitsmade section">
-  <div class="container"></div>
+  <div class="container">
+    <span class="section__desc">tradition and love</span>
+    <h2 class="section__title" >how it’s made?</h2>
+    <!-- не видит мою картинку скорее всего проблема с путем но не могу найти ошибку -->
+    <!-- <img src="../images/mobile/howitsmade/cow.png" alt=""> -->
+     <p>
+      Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+      cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo
+      fringilla.
+    </p>
+    <p>
+      Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+      Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+      suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+      tincidunt.
+    </p>
+    <p>Aliquam erat volutpat. Aenean accumsan.</p>
+    <a href=""> Read more </a>
+
+    <ul>
+      <li>
+        
+        <h3>721</h3>
+        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <li>
+          
+          <h3>16kg</h3>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </li>
+        <li>
+          
+          <h3>84</h3>
+          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </li>
+      </li>
+    </ul>
+  </div>
 </section>
