--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,92 @@
-<section class="section">
-  <div class="container"></div>
+
+<section class="section products__section">
+  <div class="container">
+    <ul class="products__list">
+      <li class="products__item">
+        <div class="products__location-block products__location-block--coffee">
+          <h3 class="products__location-title">cafe</h3>
+        </div>
+        <div class="products__text-block products__text-block--border">
+          <p class="products__main-text products__main-text--city">Chicago</p>
+          <p class="products__secondary-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </div>
+        <div class="products__text-block products__text-block--border">
+          <p class="products__main-text">Monday - Friday</p>
+          <p class="products__time-text">06:00 AM - 10:00 PM</p>
+          <p class="products__main-text">Saturday - Sunday</p>
+          <p class="products__time-text">08:00 AM - 16:00 PM</p>
+      </div>
+      <div class="products__text-block">
+        <a class="products__secondary-text" href="tel:+610383766284">
+          +61(0) 383 766 284 
+        </a>
+        <a class="products__secondary-text"
+        href="mailto:noreply@envato.com">
+        noreply@envato.com
+        </a>
+      </div>
+      </li>
+      <li class="products__item">
+
+        <div class="products__location-block products__location-block--milkshake">
+          <h3 class="products__location-title">foodtruck</h3>
+        </div>
+        <div class="products__text-block products__text-block--border">
+          <p class="products__main-text products__main-text--city">Los Angeles</p>
+          <p class="products__secondary-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </div>
+        <div class="products__text-block products__text-block--border">
+          <p class="products__main-text">Monday - Friday</p>
+          <p class="products__time-text">06:00 AM - 10:00 PM</p>
+          <p class="products__main-text">Saturday - Sunday</p>
+          <p class="products__time-text">08:00 AM - 16:00 PM</p>
+        </div>
+        <div class="products__text-block">
+        <a class="products__secondary-text" href="tel:+610383766284">
+          +61(0) 383 766 284 
+        </a>
+        <a class="products__secondary-text"
+        href="mailto:noreply@envato.com">
+        noreply@envato.com
+        </a>
+      </div>
+      </li>
+      <li class="products__item">
+        <div class="products__location-block products__location-block--coffee">
+          <h3 class="products__location-title">cafe</h3>
+        </div>
+        <div class="products__text-block products__text-block--border">
+          <p class="products__main-text products__main-text--city">New York</p>
+          <p class="products__secondary-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </div>
+        <div class="products__text-block products__text-block--border">
+          <p class="products__main-text">Monday - Friday</p>
+          <p class="products__time-text">06:00 AM - 10:00 PM</p>
+          <p class="products__main-text">Saturday - Sunday</p>
+          <p class="products__time-text">08:00 AM - 16:00 PM</p>
+        </div>
+        <div class="products__text-block">
+          <a class="products__secondary-text" href="tel:+610383766284">
+            +61(0) 383 766 284 
+          </a>
+          <a class="products__secondary-text"
+          href="mailto:noreply@envato.com">
+          noreply@envato.com
+          </a>
+        </div>
+      </li>
+    </ul>
+    <button type="button" class="button products__button">Our Locations
+      <svg class="products__button-icon" width="7" height="10">
+        <use href="./images/icons/bigger-white.svg">
+        </use>
+      </svg>
+    </button>
+    <button type="button" class="button button--white products__button">Franchise
+      <svg class="products__button-icon products__button-icon--white" width="6" height="10">
+        <use href="./images/icons/bigger.svg">
+        </use>
+      </svg>
+    </button>
+  </div>  
 </section>
