--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
 
 <section class="section products__section">
-  <div class="container">
+  <div class="container products__container">
     <ul class="products__list">
       <li class="products__item">
         <div class="products__location-block products__location-block--coffee">
@@ -17,10 +17,10 @@
           <p class="products__time-text">08:00 AM - 16:00 PM</p>
       </div>
       <div class="products__text-block">
-        <a class="products__secondary-text" href="tel:+610383766284">
+        <a class="products__secondary-text products__contacts" href="tel:+610383766284">
           +61(0) 383 766 284 
         </a>
-        <a class="products__secondary-text"
+        <a class="products__secondary-text products__contacts"
         href="mailto:noreply@envato.com">
         noreply@envato.com
         </a>
@@ -42,10 +42,10 @@
           <p class="products__time-text">08:00 AM - 16:00 PM</p>
         </div>
         <div class="products__text-block">
-        <a class="products__secondary-text" href="tel:+610383766284">
+        <a class="products__secondary-text products__contacts" href="tel:+610383766284">
           +61(0) 383 766 284 
         </a>
-        <a class="products__secondary-text"
+        <a class="products__secondary-text products__contacts"
         href="mailto:noreply@envato.com">
         noreply@envato.com
         </a>
@@ -66,10 +66,10 @@
           <p class="products__time-text">08:00 AM - 16:00 PM</p>
         </div>
         <div class="products__text-block">
-          <a class="products__secondary-text" href="tel:+610383766284">
+          <a class="products__secondary-text products__contacts" href="tel:+610383766284">
             +61(0) 383 766 284 
           </a>
-          <a class="products__secondary-text"
+          <a class="products__secondary-text products__contacts"
           href="mailto:noreply@envato.com">
           noreply@envato.com
           </a>
