--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<section class="section--howitsmade section">
+<section class="howitsmade section">
   <div class="container">
     <span class="section__desc">tradition and love</span>
     <h2 class="section__title" >how it’s made?</h2>
     <!-- не видит мою картинку скорее всего проблема с путем но не могу найти ошибку -->
-    <!-- <img src="../images/mobile/howitsmade/cow.png" alt=""> -->
-     <p>
+    <img src="./images/mobile/howitsmade/cow.png" alt="">
+    
+     <p class="howitsmade__text">
       Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
       cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo
       fringilla.
     </p>
-    <p>
+    <p class="howitsmade__text howitsmade__text--grey">
       Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
       Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
       suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
       tincidunt.
     </p>
-    <p>Aliquam erat volutpat. Aenean accumsan.</p>
-    <a href=""> Read more </a>
+    <p class="howitsmade__text howitsmade__text--grey">Aliquam erat volutpat. Aenean accumsan.</p>
+    <a class="button--white" href=""> Read more </a>
 
     <ul>
-      <li>
+      <li class="howitsmade__item">
         
-        <h3>721</h3>
-        <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        <li>
+        <h3 class="howitsmade__title-number">721</h3>
+        <p class="howitsmade__list-text" >Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        <li class="howitsmade__item">
           
-          <h3>16kg</h3>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h3 class="howitsmade__title-number">16kg</h3>
+          <p class="howitsmade__list-text"> Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </li>
-        <li>
+        <li class="howitsmade__item">
           
-          <h3>84</h3>
-          <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+          <h3 class="howitsmade__title-number">84</h3>
+          <p class="howitsmade__list-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
         </li>
       </li>
     </ul>
