--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
 <section class="section--gallery section">
   <div class="container">
     <img src="./images/mobile/gallery/gallery@2x.png" alt="" srcset="" />
+    <img src="./images/mobile/gallery/gallery@2x.png" alt="" srcset="" />
   </div>
 </section>
