--- a/src/sass/components/contacts.scss
+++ b/src/sass/components/contacts.scss
@@ -1,7 +1,15 @@
 .section--contacts {
   background-color: $bg-color;
+
+  @include for-size (tablet-only) {
   padding-top: 0;
   padding-bottom: 78px;
+  }
+
+  @include for-size(desktop) {
+    padding-top: 0;
+    padding-bottom: 63px; 
+  }
 }
 
 .contacts {
@@ -14,8 +22,14 @@
 
   @include for-size(tablet-only) {
     bottom: 78px;
-    padding-right: 21px;
-    padding-left: 21px;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+
+  @include for-size(desktop) {
+    bottom: 102px;
+    padding-right: 95px;
+    padding-left: 95px;
   }
 }
 
@@ -34,10 +48,13 @@
   @include for-size(tablet-only) {
     margin-right: 20px;
   }
+
+  @include for-size(desktop) {
+    margin-right: 31px;
+  }
 }
 
 .contacts__item {
-  width: 220px;
   background-color: $white-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
@@ -47,7 +64,13 @@
   }
 
   @include for-size(tablet-only) {
+    width: 220px;
     padding: 50px 31px;
+  }
+
+  @include for-size(desktop) {
+    width: 330px;
+    padding: 51px 44px 62px 43px;
   }
 }
 
@@ -61,6 +84,10 @@
 
   @include for-size(tablet-only) {
     padding-bottom: 30px;
+  }
+
+  @include for-size(desktop) {
+    padding-bottom: 32px;
   }
 }
 
@@ -78,6 +105,13 @@
     @include font(16px, 500, $white-color, 1.86);
     @include flex(flex, center);
     margin-bottom: 30px;
+    width: 73px;
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 500, $white-color, 1.86);
+    @include flex(flex, center);
+    margin-bottom: 32px;
     width: 73px;
   }
 }
@@ -101,7 +135,12 @@
 
   @include for-size(tablet-only) {
     @include font(14px, 500, $text-color, 1.86);
-    margin-bottom: 30px;
+    margin-bottom: 14px;
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 500, $text-color, 1.86);
+    margin-bottom: 10px; 
   }
 }
 
@@ -112,6 +151,10 @@
 
   @include for-size(tablet-only) {
     @include font(14px, 500, $second-text-color, 1.86);
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 500, $second-text-color, 1.83);
   }
 }
 
@@ -128,7 +171,14 @@
     padding-top: 30px;
     padding-bottom: 30px;
   }
+
+  @include for-size(desktop) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
 }
+
 .contact-work__item:not(:last-child) {
   @include for-size(mobile-tablet) {
     margin-bottom: 10px;
@@ -137,15 +187,23 @@
   @include for-size(tablet-only) {
     margin-bottom: 16px;
   }
+
+  @include for-size(tablet-only) {
+    margin-bottom: 15px;
+  }
 }
 
 .contacts-work__days {
   @include for-size(mobile-tablet) {
-    @include font(12px, 500, $text-color, 1.83);
+    @include font(12px, 500, $text-color, 1.86);
   }
 
   @include for-size(tablet-only) {
-    @include font(14px, 500, $text-color, 1.83);
+    @include font(14px, 500, $text-color, 1.86);
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 500, $text-color, 1.86);
   }
 }
 
@@ -156,6 +214,10 @@
 
   @include for-size(tablet-only) {
     @include font(14px, 500, $second-color, 1.83);
+  }
+
+  @include for-size(desktop) {
+    @include font(16px, 500, $second-color, 1.83);
   }
 }
 
@@ -168,6 +230,10 @@
   @include for-size(tablet-only) {
     padding-top: 30px;
   }
+
+   @include for-size(desktop) {
+    padding-top: 32px;
+  }
 }
 
 .contacts-contact__link {
@@ -178,6 +244,10 @@
   @include for-size(tablet-only) {
     @include font(14px, 500, $second-text-color, 1.83);
   }
+
+  @include for-size(desktop) {
+    @include font(16px, 500, $second-text-color, 1.83);
+  }
 }
 
 // Button
@@ -185,10 +255,16 @@
 .contacts-block {
    margin-top: 54px;
    @include for-size(tablet-only){
-   @include flex(flex, center, center);
-   margin-top: 81px;
+      @include flex(flex, center, center);
+      margin-top: 81px;
+   }   
+
+   @include for-size(desktop) {
+      @include flex(flex, center, center);
+      margin-top: 86px;
    }
-    
+
+
 }
 
 .contacts-block__button { 
@@ -207,6 +283,10 @@
   @include for-size(tablet-only) {
     padding: 12px 32px;
   }
+
+  @include  for-size(desktop) {
+    padding: 12px 35px;
+  }
   
 }
 
@@ -220,31 +300,32 @@
     padding: 12px 35px;
   }
   
-  @include for-size(tablet-only) {
+  @include for-size(tablet) {
     margin-left: 15px;
     padding: 12px 39px;
   }
 }
 
 .contacts-block__icon {
-  fill: $white-color;
+  stroke: $white-color;
   @include for-size(mobile-tablet) {
   margin-left: 8px;
  }
 
- @include for-size(tablet-only) {
+ @include for-size(tablet) {
    margin-left: 14px;
  }
 }
 
 .contacts-block__icon--white {
-  fill: $main-color;
+  stroke: $main-color;
 
-   @include for-size(mobile-tablet) {
-  margin-left: 8px;
+  @include for-size(mobile-tablet) {
+    margin-left: 8px;
  }
 
- @include for-size(tablet-only) {
-   margin-left: 14px;
+ @include for-size(tablet) {
+    margin-left: 14px;
  }
+
 }
