--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,35 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <p>homemade ice cream made</p>
+    <p>with passion</p>
+    <ul class="social-list">
+      <li class="social-list__item">
+        <a href="#" class="social-list__link" aria-label="github">
+          <svg class="social-list__icon">
+            <use href="./src/images/icons/sprite.svg#icon-github"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a href="#" class="social-list__link" aria-label="telegram">
+          <svg class="social-list__icon">
+            <use href="./src/images/icons/sprite.svg#icon-telegram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-list__item">
+        <a href="#" class="social-list__link" aria-label="facebook">
+          <svg class="social-list__icon">
+            <use href="./src/images/icons/sprite.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+    <div class="footer-contacts">
+      <p class="footer-contacts__text">Feel free to contact</p>
+      <a class="footer-contacts__link" href="tel:+61(0)383766284"
+        >+61 (0) 383 766 284</a
+      >
+    </div>
+  </div>
 </footer>
