--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,111 @@
 
 <section class="section products__section">
   <div class="container products__container">
+    <p>100% natural</p>
+    <h2>products</h2>
     <ul class="products__list">
+      <li>
+        <picture>
+          <source
+            srcset="./images/img/desktop/products/product1@1x.jpg 1x,
+            ./images/img/desktop/products/product1@1x.jpg 2x"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="./images/img/tablet/products/product1@1x.jpg 1x,
+            ./images/img/tablet/products/product1@2x.jpg 2x"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="./images/img/mobile/products/product1@1x.jpg 1x,
+            ./images/img/mobile/products/product1@2x.jpg 2x"
+            media="(max-width: 767px)"
+          />
+          <img
+            src="./images/img/desktop/products/product1@1x.jpg"
+            alt=""
+            class=""
+          />
+        </picture>
+        <h3>ice cream</h3>
+        <svg>
+          <use href="./images/icons/sprite.svg#icon-points-white"></use>
+        </svg>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et. 
+          dolore magna aliqua facilisis.
+        </p>
+        <button type="button" class="button"></button>
+      </li>
+      <li>
+        <picture>
+          <source
+            srcset="./images/img/desktop/products/product2@1x.jpg 1x,
+            ./images/img/desktop/products/product2@1x.jpg 2x"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="./images/img/tablet/products/product2@1x.jpg 1x,
+            ./images/img/tablet/products/product2@2x.jpg 2x"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="./images/img/mobile/products/product2@1x.jpg 1x,
+            ./images/img/mobile/products/product2@2x.jpg 2x"
+            media="(max-width: 767px)"
+          />
+          <img
+            src="./images/img/desktop/products/product2@1x.jpg"
+            alt=""
+            class=""
+          />
+        </picture>
+        <h3>ice coffee</h3>
+        <svg>
+          <use href="./images/icons/sprite.svg#icon-points-white"></use>
+        </svg>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et. 
+          dolore magna aliqua facilisis.
+        </p>
+        <button type="button" class="button"></button>
+      </li>
+      <li>
+        <picture>
+          <source
+            srcset="./images/img/desktop/products/product3@1x.jpg 1x,
+            ./images/img/desktop/products/product3@1x.jpg 2x"
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="./images/img/tablet/products/product3@1x.jpg 1x,
+            ./images/img/tablet/products/product3@2x.jpg 2x"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="./images/img/mobile/products/product3@1x.jpg 1x,
+            ./images/img/mobile/products/product3@2x.jpg 2x"
+            media="(max-width: 767px)"
+          />
+          <img
+            src="./images/img/desktop/products/product3@1x.jpg"
+            alt=""
+            class=""
+          />
+        </picture>
+        <h3>milkshakes</h3>
+        <svg>
+          <use href="./images/icons/sprite.svg#icon-points-white"></use>
+        </svg>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et. 
+          dolore magna aliqua facilisis.
+        </p>
+        <button type="button" class="button"></button>
+      </li>
+    </ul>
+
+<!--     <ul class="products__list">
       <li class="products__item">
         <div class="products__location-block products__location-block--coffee">
           <h3 class="products__location-title">cafe</h3>
@@ -87,6 +191,6 @@
         <use href="./images/icons/bigger.svg">
         </use>
       </svg>
-    </button>
+    </button> -->
   </div>  
 </section>
