--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -1,4 +1,4 @@
-.products__section {
+/* .products__section {
   padding: 86px 0;
   background-color: $bg-color;
 }
@@ -103,4 +103,4 @@
 
 .products__button-icon {
   margin-left: 13px;
-}
+} */
