добавлен div c классом consist

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,9 @@
 <footer class="footer">
   <div class="container">
-    <p>homemade ice cream made</p>
-    <p>with passion</p>
+    <div class="consist">
+      <p class="consist__made">homemade ice cream made</p>
+      <p class="consist__with">with passion</p>
+    </div>
     <div class="footer-info">
       <ul class="social-list">
         <li class="social-list__item">
