--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -5,7 +5,7 @@
         </div>
         <div class="review">
             <li class="quotes">
-                <img src="./image/feedback-background">
+                <img src="../images/feedback-background">
             </li>
             <li class="lines">
                 <hr size="1px"/>
