Востановление к правильной версии

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,21 +9,21 @@
         <li class="social-list__item">
           <a href="#" class="social-list__link" aria-label="github">
             <svg class="social-list__icon">
-              <use href="../images/icons/sprite.svg#icon-github"></use>
+              <use href="./images/icons/sprite.svg#icon-github"></use>
             </svg>
           </a>
         </li>
         <li class="social-list__item">
           <a href="#" class="social-list__link" aria-label="telegram">
             <svg class="social-list__icon">
-              <use href="../images/icons/sprite.svg#icon-telegram"></use>
+              <use href="./images/icons/sprite.svg#icon-telegram"></use>
             </svg>
           </a>
         </li>
         <li class="social-list__item">
           <a href="#" class="social-list__link" aria-label="facebook">
             <svg class="social-list__icon">
-              <use href="../images/icons/sprite.svg#icon-facebook"></use>
+              <use href="./images/icons/sprite.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
