--- a/src/sass/components/section.scss
+++ b/src/sass/components/section.scss
@@ -1,6 +1,9 @@
 .section {
   padding-top: 120px;
   padding-bottom: 100px;
+  &--feedback {
+    padding-bottom: 200px;
+  }
 }
 .section__title {
   margin-bottom: 30px;
