--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,19 @@
 <section class="section--gallery section">
   <div class="container">
-    <img src="./images/mobile/gallery/gallery@2x.png" alt="" srcset="" />
-    <img src="./images/mobile/gallery/gallery@2x.png" alt="" srcset="" />
+  <picture class="gallery__image">
+    <source srcset="
+      ./images/mobile/gallery/gallery.jpg   1x,
+      ./images/mobile/gallery/gallery@2x.jpg   2x
+      " media="(max-width: 767px)" />
+    <source srcset="
+      ./images/tablet/gallery/gallery.jpg   1x,
+      ./images/tablet/gallery/gallery@2x.jpg   2x
+      " media="(max-width: 1199px)" />
+    <source srcset="
+      ./images/desktop/gallery/gallery.jpg   1x,
+      ./images/desktop/gallery/gallery@2x.jpg 2x
+      " media="(min-width: 1200px)" />
+    <img src="./images/mobile/gallery/gallery.jpg" alt="photo gallery" />
+  </picture>
   </div>
 </section>
